k8s/infra/auth/overlays/dev/auth-api-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-api-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-api-jwt
spec:
  plugin:
    jwt:
      Required: true
      Keys:
        - http://auth-api-srv.auth.svc.cluster.local:3000/.well-known/jwks.json # Cluster-internal JWKS
      Alg: ES256
      PayloadFields:
        - exp # Token must expire!
        - sub # Subject required
        - aud # Audience check
        - iss # Issuer check
        #
        # Custom
        #
        - email # Whatever claims your app requires
      Audiences: # Only accept tokens meant for your API
        - tma.com
      Issuers: # Only accept tokens issued by your auth service
        - https://tma.com
      ForceRefreshKeys: true
      JwtSources:
        - type: bearer
          key: Authorization
      JwtHeaders:
        X-User-Id: sub
        X-User-Email: email
