k8s/infra/auth/overlays/dev/auth-ns.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: auth
  labels:
    linkerd.io/inject: enabled
