k8s/infra/auth/overlays/dev/auth-worker-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-worker-depl
spec:
  replicas: 1
  template:
    spec:
      affinity: null
