k8s/infra/auth/overlays/dev/auth-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: auth-api
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`tma.com`) && PathPrefix(`/api/v1/auth`)
      kind: Rule
      priority: 69
      middlewares:
        - name: auth-api-strip-prefix
      services:
        - name: auth-api-srv
          port: 3000
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-api-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/auth
