k8s/infra/auth/overlays/dev/auth-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: auth-ingress
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`tma.com`) && PathPrefix(`/api/v1/auth`)
      kind: Rule
      priority: 69
      middlewares:
        - name: strip-prefix
      services:
        - name: auth-srv
          port: 3000
  tls:
    certResolver: pebble
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/auth
